# noesis

./: .doc-coherence.json  .dockerignore  .editorconfig  .gitignore  ARCHITECTURE.md  BLOCK-ECONOMY-SPEC.md  CKB-VM-PORT.md  COHERENCE-LAWS.md  COMPETITIVE-POSITION.md  CONSENSUS-REVIEW.md  CONTINUE.md  CONTRIBUTING.md  COORDINATION-SCHELLING.md  CRYPTOECONOMICS.md  Cargo.toml  DISPUTE-SLASHING.md  Dockerfile  HANDOFF.md  INDEX-DEP-CODEHASH-BINDING.md  JARVIS-CORE-harness-as-coordination.md  LAUNCH-CHECKLIST.md  LICENSE  Makefile  ON-VM-FINALIZATION.md  OUTCOME-EVALUATOR.md  POM-CONSENSUS.md  README.md  ROADMAP-2026-2028.md  ROADMAP.md  SECURITY.md  STUDY-GUIDE.md  T7-CROSS-CELL-SIMILARITY.md  TEMPORAL-ORDER-ONCHAIN.md  THRONE.md  VISUALS.md  WHITEPAPER-FOR-DAD.md  WHITEPAPER.md  adversarial-game.py  block-ownership.py  block-value-v2.py  (+6 more)
docs/: ATTACK-DEFENSE.md  BLOCK-ECONOMY-SPEC.md  CALIBRATION-backstop-conjunctive-2026-07-21.md  CALIBRATION-ci-argument-2026-07-21.md  CLAWBACK-CASCADE-SELF-HEALING.md  COMPETITIVE-POSITION.md  CONSENSUS-REVIEW.md  CONVERGENCE-REVERSE-FORK.md  COORDINATION-SCHELLING.md  CRYPTOECONOMICS.md  DESIGN-M3-jul-economics.md  DESIGN-adaptive-adversary-instrument.md  DESIGN-authorityless-contribution-value.md  DESIGN-bootstrap-admission.md  DESIGN-committee-attested-clock.md  DESIGN-corroboration.md  DESIGN-genesis-root.md  DESIGN-governance-authority-tiering.md  DESIGN-harberger-peer-prediction-theorems.md  DESIGN-infrastructure-incentives.md  DESIGN-jul-money-layer.md  DESIGN-jul-stability-tiers.md  DESIGN-live-gossip.md  DESIGN-mind-scarcity-asymmetry.md  DESIGN-multi-producer-nakamoto.md  DESIGN-nakamoto-inc2b-fork-choice.md  DESIGN-never-halt-liveness.md  DESIGN-periphery-solution.md  DESIGN-pow-work-dimension.md  DESIGN-pragma-layer-amendment-coherence.md  DESIGN-value-oracle-seam.md  DISPUTE-SLASHING.md  FAQ.md  ISOMORPHISM-INVARIANCE-VS.md  MANIFESTO.md  MINDCOIN-FOUNDING.md  NOESIS-FAQ.md  NOESIS-FOR-DUMMIES.md  NOESIS-LITEPAPER.md  NOESIS-ONEPAGER.md  (+31 more)
frontend/: README.md  crypto.js  index.html  parity-test.mjs  questions.json
internal/: BUILD-NEXT-tx-digest.md  CALIBRATION-base-case-is-god-2026-07-13.md  CONTINUE.md  DECISIONS-M3-money-2026-07-15.md  DEPLOY-testnet.md  DESIGN-LAWS.md  DESIGN-adaptive-convergence-theorem.md  DESIGN-block-logistics-mechanism.md  DESIGN-block-logistics.md  DESIGN-convergence-fixed-point.md  DESIGN-elastic-pow-money.md  DESIGN-joint-decay-damping-rate.md  DESIGN-locksig-binding.md  DESIGN-multi-identity-split-acceptance.md  DESIGN-onvm-locksig-program.md  DESIGN-parametric-clawback.md  DESIGN-peg-proof-template-for-hce.md  DESIGN-reflexive-provenance.md  DESIGN-stolen-offchain-content.md  DESIGN-vesting-W-and-standing-bridge.md  DESIGN-wills-equilibrium.md  EXTRACTION-AUDIT-2026-06-19.md  EXTRACTION-AUDIT-CHECKLIST.md  EXTRACTION-AUDIT-LOG.md  FOUNDATION-grace-made-mechanical.md  HANDOFF-2026-07-10-block-logistics-and-essential-complexity.md  HANDOFF.md  JARVIS-CORE-harness-as-coordination.md  JARVIS-ON-NOESIS.md  LOOP-PLAN-to-golive.md  MOAT-STACK.md  MVP-SCOPE-JULY-2026.md  PIN-quorum-floor-decision.md  PRIOR-ART-contribution-dag.md  RELEASE-PLAN-VIBESWAP-ON-NOESIS.md  RESEARCH-NETWORK-CONSENSUS.md  RESEARCH-learned-vs-from-merged-prs.md  ROADMAP-LEAN-INTO-EDGE.md  ROADMAP-WILLS-EQUILIBRIUM.md  STATUS-LEDGER.md  (+3 more)
node/: Cargo.toml  README.md
node/examples/: adaptive_sim.rs  moat_sim.rs  peer_prediction_sim.rs  periphery_sim.rs  sybil_sim.rs  wash_sim.rs
node/src/: amendment.rs  chainspec.rs  gossip.rs  jul.rs  lib.rs  liveness.rs  net.rs  pom_export.rs  reorg.rs  reserve.rs  rpc.rs  runtime.rs  screen.rs  store.rs  subblock.rs  sync.rs  tokens.rs  utxo_commitment.rs  wallclock.rs  wire.rs
node/src/fixtures/: outcome_labels_demo.txt
node/tests/: apply_block_parity.rs  byzantine.rs  ckb_vm_adversarial.rs  ckb_vm_commit_order.rs  ckb_vm_finalization.rs  ckb_vm_index_rule.rs  ckb_vm_locksig.rs  ckb_vm_pom_typescript.rs  ckb_vm_proven_e2e.rs  ckb_vm_smoke.rs  ckb_vm_syscalls.rs  clock_enforcement.rs  clock_wiring.rs  core_drift_guard.rs  discernment.rs  equivocation_live_path.rs  fv_invariants.rs  gaming.rs  gossip_flood.rs  jul_issuance.rs  jul_reserve.rs  jul_settlement.rs  launch_copy_invariants.rs  listen_serves_durable_store.rs  liveness.rs  parent_hash_binding.rs  persistence_roundtrip.rs  pow_arithmetic.rs  pow_enforcement.rs  reorg_rollback.rs  subblock.rs  submission_deposit.rs  sync_join.rs  transport_framing.rs  two_node.rs  two_node_join.rs  value_oracle_seam.rs  wallclock.rs
node/tests/common/: mod.rs
node/tests/fixtures/: commit-order-typescript  finalization-typescript  index-typescript  locksig-typescript  pom-typescript  proof-of-mind-lock-script
onchain/commit-order-typescript/: Cargo.toml
onchain/commit-order-typescript/src/: main.rs
onchain/finalization-typescript/: Cargo.toml  rust-toolchain.toml
onchain/finalization-typescript/src/: main.rs
onchain/index-typescript/: Cargo.toml  rust-toolchain.toml
onchain/index-typescript/src/: main.rs
onchain/locksig-typescript/: Cargo.toml  rust-toolchain.toml
onchain/locksig-typescript/src/: main.rs
onchain/noesis-core/: Cargo.toml
onchain/noesis-core/src/: lib.rs
onchain/pom-typescript/: Cargo.toml  rust-toolchain.toml
onchain/pom-typescript/src/: main.rs
onchain/zk-finalize/: Cargo.toml  README.md
onchain/zk-finalize/host/: Cargo.toml
onchain/zk-finalize/host/src/: main.rs
onchain/zk-finalize/methods/: Cargo.toml
onchain/zk-finalize/methods/guest/: Cargo.toml
onchain/zk-finalize/methods/guest/src/: main.rs
onchain/zk-finalize/methods/src/: lib.rs
onchain/zk-finalize/parity/: Cargo.toml
onchain/zk-finalize/parity/src/: main.rs
onchain/zk-score/: .gitignore  Cargo.toml  README.md
onchain/zk-score/host/: Cargo.toml
onchain/zk-score/host/src/: main.rs
onchain/zk-score/methods/: Cargo.toml
onchain/zk-score/methods/guest/: Cargo.toml
onchain/zk-score/methods/guest/src/: main.rs
onchain/zk-score/methods/src/: lib.rs
onchain/zk-score/parity/: Cargo.toml
onchain/zk-score/parity/src/: main.rs
(+102 files in other folders)
