[package]
name = "noesis"
version = "0.0.1"
edition = "2021"
description = "Proof-of-Mind value chain — core mechanism (PRIVATE, stealth)"

# Execution layer: RISC-V via CKB-VM (Nervos), same substrate as the CKB pivot.
# The core mechanism stays VM-agnostic; ckb-vm is a DEV dependency only (host-side
# smoke harness, CKB-VM-PORT.md increment #2) until the type-script lands.
[dependencies]
# T7 #1 (T7-CROSS-CELL-SIMILARITY.md): the novelty-index SMT. blake2b-ref is the
# no_std-proven hasher from the vibeswap cell recipe — keeps the SMT core portable
# to the type-script later.
blake2b-ref = { version = "0.3", default-features = false }
# Single source of truth for the on-VM cores (commit_order re-exported by the lib; smt/proven/
# value_fixed/semantic drift-guarded in tests). The lib links it so there is ONE implementation.
noesis-core = { path = "../onchain/noesis-core" }
# pom_export layer (VERIFIABLE-REDUCTION-AND-EXPORT-LAYER.md): serialize the PoM v(S) output to
# a portable, re-derivable JSON a foreign chain can consume. Host-side only (the export layer runs
# off the RISC-V type-script), so std-serde is fine here.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# EVM-portable per-contributor Merkle root over the PoM scores. keccak256 (matching OZ
# MerkleProof: double-hash leaf + commutative pairs) so an on-chain PoMExportHub consumer
# can verify a contributor's value against the exported root. Host-side only.
tiny-keccak = { version = "2.0", features = ["keccak"] }

[dev-dependencies]
ckb-vm = "0.24"
# Integration tests call the single-sourced tx digest + Lamport verifier directly (the host
# wallet side of the on-VM lock script) — noesis-core is a normal dep but isn't auto-visible to
# the separate integration-test crates, so it is listed here too.
noesis-core = { path = "../onchain/noesis-core" }

[lib]
name = "noesis"
path = "src/lib.rs"
