[package]
name = "index-typescript"
version = "0.0.1"
edition = "2021"
# PRIVATE — Noesis on-VM novelty-index root-transition assertion (the WRITE half of the seen-set:
# proves the served novelty root was honestly maintained; the intake floor reads that root).

[[bin]]
name = "index-typescript"
path = "src/main.rs"

[dependencies]
# Proven recipe from vibeswap contracts-ckb ([F·ckb-cell-build-recipe]):
ckb-std = { version = "0.16", default-features = false, features = ["ckb-types", "allocator"] }
noesis-core = { path = "../noesis-core" }

[profile.release]
overflow-checks = true
codegen-units = 1
