[package]
name = "locksig-typescript"
version = "0.0.1"
edition = "2021"
# PRIVATE — Noesis on-VM lock script: existence→control enforced INSIDE the VM
# (DESIGN-onvm-locksig-program.md, (rr)). Recomputes the canonical tx_digest on-VM and
# verifies each input's post-quantum Lamport signature against the cell's lock root.

[[bin]]
name = "locksig-typescript"
path = "src/main.rs"

[dependencies]
# Proven recipe from vibeswap contracts-ckb ([F·ckb-cell-build-recipe]):
ckb-std = { version = "0.16", default-features = false, features = ["ckb-types", "allocator"] }
noesis-core = { path = "../noesis-core" }

[profile.release]
overflow-checks = true
codegen-units = 1
