[package]
name = "pom-typescript"
version = "0.0.1"
edition = "2021"
# PRIVATE — Noesis on-VM intake validation (CKB-VM-PORT.md increment #3 second half).

[[bin]]
name = "pom-typescript"
path = "src/main.rs"

[dependencies]
# Proven recipe from vibeswap contracts-ckb ([F·ckb-cell-build-recipe]):
ckb-std = { version = "0.16", default-features = false, features = ["ckb-types", "allocator"] }
noesis-core = { path = "../noesis-core" }

[profile.release]
overflow-checks = true
codegen-units = 1
