# The guest package name becomes the method const stem: `zk-score` -> ZK_SCORE_ELF / ZK_SCORE_ID.
[package]
name = "zk-score"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "zk-score"
path = "src/main.rs"

[dependencies]
risc0-zkvm = { version = "1.2", default-features = false, features = ["std"] }
# The SAME verify-side core the node and the on-VM type-scripts share. The guest proves THIS code
# (`proven_floored_novelty_q16`), not a re-implementation — no_std + alloc, drops into the zkVM guest.
noesis-core = { path = "../../../noesis-core" }
